[build-system]
requires = ["setuptools", "cython", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
name = "pyqlib"
dynamic = ["version"]
description = "量化研究平台"
requires-python = ">=3.11.9"
readme = { file = "README.md", content-type = "text/markdown" }

dependencies = [
    "pyyaml>=6.0.1",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    # 固定 mlflow 版本以避免 set_uri 问题
    "mlflow>=3.1.1",
    "filelock>=3.16.0",
    "redis>=5.0.1",
    "dill>=0.3.8",
    "fire>=0.5.0",
    "ruamel.yaml>=0.17.38",
    "python-redis-lock>=4.0.0",
    "tqdm>=4.66.1",
    "pymongo>=3.11.0",
    "loguru>=0.7.2",
    "lightgbm~=4.6.0",
    "gymnasium~=1.1.1",
    "cvxpy>=1.4.1",
    "joblib>=1.3.2",
    "matplotlib>=3.8.2",
    "jupyter>=1.0.0",
    "nbconvert>=7.14.0",
    "pyarrow>=15.0.0",
    "pydantic-settings>=2.1.0",
    # 添加ArcticDB作为依赖，替代原有的Arctic
    "arcticdb>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.4.1",
    "statsmodels>=0.14.1",
]
# 已升级至 numpy 2.2.4 和 tianshou 1.20，支持最新版本特性
rl = [
    # "tianshou==2.0.0b1",
    "torch~=2.7.1",
    "numpy>=1.24.3",
]
lint = [
    "black==23.12.1",
    "pylint==3.0.3",
    "mypy==1.4.1",
    "flake8==6.0.0",
    "nbqa==1.7.0",
]
# snowballstemmer 是 sphinx 的依赖包，于 2025-05-08 发布了 3.0.0 版本，
# 导致构建过程出错，因此目前限制了其版本。
docs = [
    # 升级 scipy 到 1.16.0 后，
    "scipy==1.16.0",
    "sphinx==7.2.6",
    "sphinx_rtd_theme==1.3.0",
    "readthedocs_sphinx_ext==2.2.5",
    "snowballstemmer==2.2.0",
]
package = [
    "twine==4.0.2",
    "build==1.0.3",
]
# test_pit 依赖包
test = [
    "yahooquery==2.3.1",
    "baostock==0.8.8",
]
analysis = [
    "plotly==5.18.0",
    "statsmodels==0.14.1",
]

[tool.setuptools]
packages = [
    "qlib",
]

[project.scripts]
qrun = "qlib.workflow.cli:run"
